
* Version 1.5.0:
 - New option: -E, to use an ephemeral key pair for each query.
 - Logging to files is supported on Windows.

* Version 1.4.3:
 - libevent update, including a fix for CVE-2014-6272
 - Two new public dnscrypt resolvers were added: opennic-us-wa-ns1 and
dnscrypt.org-fr.
 - d0wn servers in France IP have changed.
 - Compilation fixes.

* Version 1.4.2:
 - New compilation switch: --with-systemd, to enable socket activation
support when using systemd.
 - The list of public DNSCrypt-enabled resolvers was updated.
 - Libevent2 updates.

* Version 1.4.1:
 - Alternative ports to dnscrypt.eu servers have been added
 - Android build scripts are now part of the package
 - UDP queries timing out are not retried any more. This caused some issues
and was already better handled by stub resolvers and caching name servers.

* Version 1.4.0:
 - Security: versions 0.11 to 1.3.3 were vulnerable to a denial of
service when running out of output buffer space. Reported by @iamultra.
 - Windows: --uninstall now actually stops the service
 - Windows: registry keys are automatically created for a given
provider when installing the service.
 - The resolver to use and its configuration can now be specified as a
definition file + the name of the resolver to use. The new
command-line options to use are --resolvers-list=<csv file> (optional
on non-Windows platforms) and --resolver-name=<name>. This deprecates
--provider-key, --provider-name and --resolver-address.
 - Documentation and diagnostics have been improved.

* Version 1.3.3:
 - Try to send questions as big as the response can be. Upgrading is
highly recommended, as the server can refuse to respond to queries using
UDP if the response is larger than the question.

* Version 1.3.2:
 - faster startup on iOS and Android
 - New command-line switch: --test, in order to check if a certificate can be
   used, with an optional time safety margin.
 - The package now includes an AppArmor profile, thanks to InsanityBit.